...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final state = ref.watch(urlCreationStateProvider);
    final stateNotifier = ref.watch(urlCreationStateProvider.notifier);

    return ControlledTextFormField(
      key: const Key('textfield-create-url'),
      decoration: AppTextFieldDecoration(
        hintText: 'https://my-long-url/here',
        prefixIcon: const Icon(Icons.link),
        suffixIcon: state.canSubmit
            ? AppIconButton(
                icon: const Icon(Icons.done),
...
